Fix loadMapFromInput scope issue

--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         <div style="display: flex; gap: 8px; margin-bottom: 16px;">
           <input type="text" id="map-url-input" placeholder="Paste Felt map URL or ID" 
             style="flex: 1; padding: 10px 12px; border-radius: 8px; border: 1px solid var(--border); background: var(--bg-primary); color: var(--text-primary); font-size: 0.875rem;">
-          <button onclick="loadMapFromInput()" class="btn btn-primary" style="padding: 10px 16px;">Load</button>
+          <button id="load-map-btn" class="btn btn-primary" style="padding: 10px 16px;">Load</button>
         </div>
       </div>
       <div class="sidebar-section">
@@ -1218,6 +1218,9 @@
     document.getElementById('action-toggle').addEventListener('click', toggleAllLayers);
     document.getElementById('action-clear').addEventListener('click', clearSelection);
     document.getElementById('action-table').addEventListener('click', showDataTable);
+
+    // Load map button
+    document.getElementById('load-map-btn').addEventListener('click', loadMapFromInput);
 
     // Enter key to load map
     document.getElementById('map-url-input').addEventListener('keypress', (e) => {
